Updated proposal after proofreading.

--- a/doc/ProposalSrc/lostvaults.tex
+++ b/doc/ProposalSrc/lostvaults.tex
@@ -25,10 +25,10 @@ A proposal for implementing a concurrent server model as the basis for an online
 \listoffigures
 \newpage
 \section{Introduction}
-Concurrency is becoming a more and more important facet of software development as computers rely more heavily on parallel processing and the way we write programs has to change to face 
-the challenges that follow making use of this increase in processing power. As a way for us to explore these challenges and their solutions, we opted to work on a server-client 
-system over a TCP/IP network connection. The problem we attempt to solve is maintaining a responsive environment for multiple, simultaneous connections as well as multiple active and 
-independent sections of program logic. We represent this problem through a multi-user dungeon or MUD, a form of online multiplayer game, where we aim to make sure that the server maintains 
+Concurrency is becoming a more and more important facet of software development as computers rely more heavily on parallel processing. Because of this the way we write programs has to change 
+to tackle the new type of problems that arise from making use of this different kind of architecture. As a way for us to explore these challenges and their solutions, we opted to work on a 
+server-client system over a TCP/IP network connection. The problem we attempt to solve is maintaining a responsive environment for multiple, simultaneous connections as well as multiple 
+active and independent sections of program logic. We represent this problem through a multi-user dungeon or MUD, a form of online multiplayer game, where we aim to make sure that the server maintains 
 stable performance regardless of the number of connected users and we have decided to call this game Lost Vaults.
 
 Lost Vaults is a semi-traditional MUD where users interact with other players and take on quests in parties 
